Fixing Factlink on mobile devices

--- a/core/app/assets/stylesheets/activity.css.less
+++ b/core/app/assets/stylesheets/activity.css.less
@@ -1,7 +1,5 @@
 @import "bootstrap/mixins";
 
-* { transition: none !important; }
-
 #activity_for_channel {
   .empty-stream {
     margin-top: 24px;
